# AIEnvironment

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT_DEEP_TECHNICAL.md  README.md  demo_output.ps1  pyproject.toml  requirements.txt  server_log.txt  temp_index_html.txt  test_demo.ps1  verify_compliance.py
.claude/: settings.json  settings.local.json
_deprecated/: README.md
data/: bnpb_jakarta_static.json
db/: config.py  migration_runner.py  pipeline_writer.py  psycopg2_connection.py  trend_repository.py
frontend/: index.html  package-lock.json  package.json
models/: best_hyperparameters_jakarta.json  feature_list_jakarta.json  model_card_jakarta.json  model_card_realtime_native.json  optimal_threshold_realtime_native.json  reproducibility_jakarta.json
poskobanjir/: config.py  main.py
reports/: advanced_model_report.txt  model_training_report_jakarta.txt  project_summary.json
scripts/: check_integrations.py  check_postgres_runtime.py  demo_agentic_explain.py  example_status_normalization.py  migrate.ps1  prepare_data.py  retrain_bundle.py  run_jakarta_satu_ingest.py  run_migration.py  run_migrations.py  run_pipeline_db_example.py  verify_db_constraints.py
tests/: conftest.py  test_adaptive_threshold_provider.py  test_agentic_explain.py  test_api_hardening.py  test_api_import.py  test_canonical_scenarios.py  test_dashboard_route.py  test_decide_l1_7_safety_floor.py  test_decision_conformance.py  test_failure_simulation.py  test_feature_history_safety.py  test_jakarta_satu_scraper.py  test_location_normalizer.py  test_migration_runner.py  (+7 more)
(+203 files in other folders)
